--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "react.di": "^2.0.0-beta.3",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^6.3.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
