--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "primeicons": "^1.0.0-beta.10",
+    "primereact": "^2.0.0-beta.9",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-loadable": "^5.5.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
     "react.di": "^2.0.0-beta.3",
     "reflect-metadata": "^0.1.12",
@@ -22,6 +28,8 @@
     "@types/node": "^10.11.7",
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.9",
+    "@types/react-router": "^4.0.32",
+    "@types/react-router-dom": "^4.3.1",
     "typescript": "^3.1.3"
   }
 }
