--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "primeicons": "^1.0.0-beta.10",
     "primereact": "^2.0.0-beta.9",
     "react": "^16.5.2",
