--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
+    "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0-beta.10",
     "primereact": "^2.0.0-beta.9",
     "react": "^16.5.2",
