--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "primeicons": "^1.0.0-beta.10",
     "primereact": "^2.0.0-beta.9",
     "react": "^16.5.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
@@ -30,6 +31,7 @@
     "@types/jest": "^23.3.5",
     "@types/node": "^10.11.7",
     "@types/react": "^16.4.16",
+    "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "^16.0.9",
     "@types/react-router-dom": "^4.3.1",
     "typescript": "^3.1.3"
