--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts-ts": "^4.0.8",
     "react.di": "^2.0.0-beta.3",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "speak-tts": "^2.0.8"
   },
   "scripts": {
     "start": "react-scripts-ts start",
