--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jquery": "^3.3.29",
     "@types/lodash": "^4.14.120",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
