--- a/package.json
+++ b/package.json
@@ -3,25 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "@types/jquery": "^3.3.29",
-    "@types/lodash": "^4.14.120",
+    "@types/lodash": "^4.14.123",
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.4",
+    "jquery": "^3.4.0",
+    "popper.js": "^1.15.0",
     "primeflex": "^1.0.0-rc.1",
-    "primeicons": "^1.0.0-beta.10",
-    "primereact": "^2.0.0-beta.9",
-    "react": "^16.5.2",
+    "primeicons": "^1.0.0",
+    "primereact": "^2.0.1",
+    "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.8.6",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "^4.0.8",
-    "react.di": "^2.0.0-beta.3",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.3.3",
+    "react.di": "^2.0.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.4.0",
     "speak-tts": "^2.0.8"
   },
   "scripts": {
@@ -31,13 +33,13 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.5",
-    "@types/node": "^10.11.7",
-    "@types/react": "^16.4.16",
+    "@types/jest": "^23.3.14",
+    "@types/node": "^10.14.5",
+    "@types/react": "^16.8.14",
     "@types/react-copy-to-clipboard": "^4.2.6",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-router-dom": "^4.3.1",
-    "typescript": "^3.1.3"
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.2",
+    "typescript": "^3.4.4"
   },
   "browserslist": [
     ">0.2%",
