--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@types/jest": "^23.3.14",
     "@types/node": "^10.14.5",
     "@types/react": "^16.8.14",
