--- a/package.json
+++ b/package.json
@@ -3,32 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-brands-svg-icons": "^5.13.1",
-    "@fortawesome/free-regular-svg-icons": "^5.13.1",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@types/jquery": "^3.5.0",
-    "@types/lodash": "^4.14.157",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
-    "classnames": "^2.2.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@popperjs/core": "^2.11.0",
+    "@types/jquery": "^3.5.11",
+    "@types/lodash": "^4.14.178",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
+    "jquery": "^3.6.0",
     "primeflex": "^2.0.0-rc.1",
-    "primeicons": "^4.0.0",
-    "primereact": "^4.2.2",
-    "react": "^16.13.1",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
+    "primeicons": "^5.0.0",
+    "primereact": "^7.1.0",
+    "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts-ts": "^4.0.8",
     "react.di": "^2.0.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.0",
+    "rxjs": "^7.5.1",
     "speak-tts": "^2.0.8"
   },
   "scripts": {
@@ -38,14 +38,13 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.1",
-    "@types/jest": "^26.0.4",
-    "@types/node": "^14.0.23",
-    "@types/react": "^16.9.43",
-    "@types/react-copy-to-clipboard": "^4.3.0",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
-    "typescript": "^3.9.6"
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
+    "@types/react-copy-to-clipboard": "^5.0.2",
+    "@types/react-dom": "^17.0.11",
+    "typescript": "^4.5.4"
   },
   "browserslist": [
     ">0.2%",
