--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.18.10",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -14,27 +16,30 @@
     "@types/jquery": "^3.5.11",
     "@types/lodash": "^4.14.178",
     "axios": "^0.24.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "customize-cra": "^1.0.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "font-awesome": "^4.7.0",
+    "inversify-react": "^1.0.2",
     "jquery": "^3.6.0",
     "primeflex": "^2.0.0-rc.1",
     "primeicons": "^5.0.0",
     "primereact": "^7.1.0",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts-ts": "^4.0.8",
-    "react.di": "^2.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.1",
     "speak-tts": "^2.0.8"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
@@ -44,7 +49,7 @@
     "@types/react": "^17.0.38",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.11",
-    "typescript": "^4.5.4"
+    "typescript": "^4.8.2"
   },
   "browserslist": [
     ">0.2%",
