--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@popperjs/core": "^2.11.0",
     "@types/jquery": "^3.5.11",
     "@types/lodash": "^4.14.178",
@@ -31,7 +31,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts-ts": "^4.0.8",
+    "react-scripts": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.1",
     "speak-tts": "^2.0.8"
@@ -44,12 +44,12 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.5",
-    "@types/react": "^17.0.38",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.59",
+    "@types/react": "^17.0.50",
     "@types/react-copy-to-clipboard": "^5.0.2",
-    "@types/react-dom": "^17.0.11",
-    "typescript": "^4.8.2"
+    "@types/react-dom": "^17.0.17",
+    "typescript": "^4.8.3"
   },
   "browserslist": [
     ">0.2%",
