--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/icons": "^5.0.0-beta.5",
     "@popperjs/core": "^2.11.0",
     "@types/jquery": "^3.5.11",
     "@types/lodash": "^4.14.178",
