--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-scripts": "^5.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.1",
-    "speak-tts": "^2.0.8"
+    "speak-tts": "^2.0.8",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
