--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.18.10",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@material-ui/core": "^5.0.0-beta.5",
-    "@material-ui/icons": "^5.0.0-beta.5",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.5",
     "@popperjs/core": "^2.11.0",
     "@types/jquery": "^3.5.11",
     "@types/lodash": "^4.14.178",
     "axios": "^0.24.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "customize-cra": "^1.0.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.1",
     "classnames": "^2.3.1",
+    "customize-cra": "^1.0.0",
     "font-awesome": "^4.7.0",
     "inversify-react": "^1.0.2",
     "jquery": "^3.6.0",
