--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "classnames": "^2.3.1",
     "customize-cra": "^1.0.0",
     "font-awesome": "^4.7.0",
-    "inversify-react": "^1.0.2",
     "jquery": "^3.6.0",
     "primeflex": "^2.0.0-rc.1",
     "primeicons": "^5.0.0",
@@ -36,6 +35,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.1",
     "speak-tts": "^2.0.8",
+    "tsyringe": "^4.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
