--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@babel/plugin-proposal-decorators": "^7.18.10",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "@popperjs/core": "^2.11.0",
@@ -23,17 +23,17 @@
     "customize-cra": "^1.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
-    "primeflex": "^2.0.0-rc.1",
-    "primeicons": "^5.0.0",
-    "primereact": "^7.1.0",
-    "react": "^17.0.2",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.0",
+    "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
-    "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.4.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
     "speak-tts": "^2.0.8",
     "tsyringe": "^4.8.0",
     "web-vitals": "^2.1.4"
@@ -45,7 +45,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.59",
     "@types/react": "^17.0.50",
