--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "speak-tts": "^2.0.8",
+    "styled-jsx": "^5.1.6",
     "tsyringe": "^4.8.0",
     "web-vitals": "^3.5.2"
   },
